left alignment fix revert

--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -11,9 +11,7 @@ ul {
     li {
         padding: 20px;
         text-align: center;
-        width: 180px;
-        display: block;
-        margin: auto;
+        display: flex;
 
         .link {
             align-items: center;
@@ -23,7 +21,7 @@ ul {
 
             .menu-icon {
                 width: fit-content;
-                margin: 0;
+                margin: 0 auto;
     
                 svg {
                     fill: #fff;
@@ -58,7 +56,6 @@ ul {
     }
 
     li {
-        width: fit-content;
         justify-content: center;
 
         &:nth-last-child(2) {
